# Pseudo3Dgame

./: CMakeLists.txt  LICENSE.txt
include/: Camera.h  Map.h  Object.h  Player.h
include/objects/: Wall.h
src/: Camera.cpp  Map.cpp  Object.cpp  Player.cpp  Wall.cpp  main.cpp
